src/common/styles/Login.module.css
.h1 {
  font-weight: 700;
  color: white;
  margin: 0;
  font-size: 1.5rem;
}

.description {
  opacity: 0.6;
  color: white;
}
.form {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}
.form input {
  width: 100%;
  height: 2rem;
  border: none;
  border-bottom: 1.5px solid var(--secondary);
  background-color: transparent;
  font-weight: 600;
  padding-left: 1.75rem;
}

.form input::placeholder {
  color: var(--secondary);
}

.form input:focus {
  outline: none;
}
.form div {
  position: relative;
}

.form i {
  position: absolute;
  top: 45%;
  transform: translateY(-50%);
  color: var(--secondary);
  left: 0.25rem;
}
.form i.toggle-password {
  position: absolute;
  top: 50%;
  left: auto;
  right: 8px;
  transform: translateY(-50%);
  cursor: pointer;
}
.link-forgot {
  display: flex;
  flex-direction: row-reverse;
  text-align: end;
  font-weight: 600;
  margin-top: -0.5rem;
}

.link-forgot a {
  color: var(--secondary);
  text-decoration: none;
}
.form button {
  margin-top: 1rem;
  width: 100%;
  height: 3rem;
  border: none;
  color: var(--primary);
  background-color: var(--secondary);
  font-weight: 700;
  border-radius: 0.75rem;
}
.form button:disabled {
  color: var(--dark);
  background-color: var(--dark03);
}
.form button:hover {
  opacity: 0.9;
}

.link-blue {
  color: var(--secondary);
  text-align: center;
}

.link-blue a:hover,
.link-forgot a:hover {
  opacity: 0.7;
}
@media (min-width: 768px) {
  .h1 {
    color: black;
  }
  .description {
    color: black;
  }
  .form input {
    height: 3rem;
    border-bottom: 1.5px solid var(--dark03);
    background-color: var(--background);
  }
  .form input::placeholder {
    color: var(--dark03);
  }
  .form i {
    color: var(--dark03);
  }
  .link-forgot a {
    color: var(--dark02);
  }
  .form button {
    color: var(--secondary);
    background-color: var(--primary);
  }
  .link-blue {
    color: var(--dark02);
  }
  .link-blue a {
    color: var(--primary);
  }
  .form {
    gap: 3rem;
  }
}

